--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -7,5 +7,9 @@
   background-color: #2a2c2e;
   
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
 }
