внес правки согласно ревью

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,14 +1,16 @@
 .place {
+  margin: 0 auto;
   padding-top: 64px;
   display: grid;
-  grid-template-columns: repeat(minmax(320px, 460px), minmax(288px, 484px));
+  grid-template-columns: 340px, 1fr;
   grid-gap: 32px 25px;
   overflow: hidden;
+  justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
   .place {
-    grid-template-columns: minmax(320px, 460px) minmax(288px, 484px);
+    grid-template-columns: minmax(340px, 352px) minmax(288px, 484px);
     grid-gap: 48px 28px;
     margin: 0 24px 0;
   }
