--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -3,7 +3,7 @@
   width: 100%;
   background-image: url(../../../images/cover-trains.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: round;
   display: flex;
   flex-direction: column;
   align-items: center;
