--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -1,4 +1,9 @@
 .footer__link-item {
   color: #fff;
   text-decoration: none;
+  transition: .3s linear;
+}
+
+.footer__link:hover {
+  opacity: .8;
 }
