--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -9,6 +9,8 @@
 
 @media screen and (min-width: 768px) {
   .intro__title {
+    line-height: 1.07;
+    font-size: 54px;
     width: 720px;
   }
 }
