--- a/blocks/lead/__cuption/lead__cuption.css
+++ b/blocks/lead/__cuption/lead__cuption.css
@@ -7,17 +7,17 @@
   text-transform: uppercase;
   margin: 8px 0 0;
   align-self: flex-start;
-  padding-left: 16px;
+  margin-left: 16px;
 }
 
 @media screen and (min-width: 768px) {
   .lead__cuption {
-    padding-left: 24px;
+    margin-left: 24px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .lead__cuption {
-    padding-left: 0;
+    margin-left: 0;
   }
 }
