--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,10 +1,10 @@
 .place__paragraphs {
-  margin-top: -8px;
-  margin-left: 16px;
+  margin: 0 16px;
 }
 
 @media screen and (min-width: 768px) {
   .place__paragraphs {
-    margin-left: 0;
+    margin: 0;
+    width: 100%;;
   }
 }
