--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,6 +9,7 @@
 
 @media screen and (min-width: 768px) {
   .place__title {
+    max-width: 90%;
     line-height: 1.1;
     font-size: 42px;
     margin-left: 0;
