--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   padding-top: 64px;
   display: grid;
-  grid-template-columns: 340px, 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 32px 25px;
   overflow: hidden;
   justify-content: center;
@@ -10,7 +10,7 @@
 
 @media screen and (min-width: 768px) {
   .place {
-    grid-template-columns: minmax(340px, 352px) minmax(288px, 484px);
+    grid-template-columns: 340px 1fr;
     grid-gap: 48px 28px;
     margin: 0 24px 0;
   }
@@ -18,6 +18,7 @@
 
 @media screen and (min-width: 1024px) {
   .place {
+    grid-template-columns: 440px 1fr;
     grid-gap: 48px 32px;
     margin: 0 48px 0;
   }
@@ -25,6 +26,7 @@
 
 @media screen and (min-width: 1280px) {
   .place {
+    grid-template-columns: 460px 1fr;
     grid-gap: 48px 40px;
     margin: 0 148px 0;
   }
