--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,3 +3,15 @@
   display: flex;
   position: relative;
 }
+
+@media screen and (min-width: 768px) {
+  .cover {
+    margin-top: 90px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cover {
+    margin-top: 92px;
+  }
+}
