--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,7 @@
 .photo-grid {
   max-width: 1184px;
   margin: 0 auto;
-  padding: 64px 16px 0;
+  padding: 64px 16px 14px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
   grid-gap: 12px;
@@ -9,7 +9,7 @@
 
 @media screen and (min-width: 768px) {
   .photo-grid {
-    padding: 88px 24px 0;
+    padding: 88px 24px 15px;
     grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
     grid-gap: 16px;
   }
@@ -17,7 +17,7 @@
 
 @media screen and (min-width: 1024px) {
   .photo-grid {
-    padding: 92px 48px 0;
+    padding: 92px 48px 12px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 14px;
   }
