--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   margin: 0 auto;
-  padding-top: 64px;
+  margin-top: 50px;
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 32px 25px;
@@ -12,7 +12,7 @@
   .place {
     grid-template-columns: 340px 1fr;
     grid-gap: 48px 28px;
-    margin: 0 24px 0;
+    margin: 73px 24px 0;
   }
 }
 
@@ -20,7 +20,7 @@
   .place {
     grid-template-columns: 440px 1fr;
     grid-gap: 48px 32px;
-    margin: 0 48px 0;
+    margin: 80px 48px 0;
   }
 }
 
